<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
	android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hajau.lockscreen.Main_Activity" >

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFFFF"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digitalClock1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:textColor="#FFFFFFFF"
        android:text="@string/hello_world" />

   <EditText
        android:id="@+id/editText1"
        android:labelFor="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:textColor="#FFFFFFFF"
        android:inputType="text" >

    </EditText>

	<Button
        android:id="@+id/button2"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"     
        android:text="@string/hai" />
	<Button 
	    android:id="@+id/button1"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginEnd="30dp"
        android:text="@string/mot"
        />
	<Button 
	    android:id="@+id/button3"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:layout_marginStart="30dp"
        android:text="@string/ba"
        />
	<Button
        android:id="@+id/button5"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"     
        android:text="@string/nam" />
	<Button 
	    android:id="@+id/button4"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button5"
        android:layout_toStartOf="@+id/button5"
        android:layout_marginEnd="30dp"
        android:text="@string/bon"
        />
	<Button 
	    android:id="@+id/button6"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:layout_marginStart="30dp"
        android:text="@string/sau"
        />
	<Button
        android:id="@+id/button8"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"     
        android:text="@string/tam" />
	<Button 
	    android:id="@+id/button7"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button8"
        android:layout_toStartOf="@+id/button8"
        android:layout_marginEnd="30dp"
        android:text="@string/bay"
        />
	<Button 
	    android:id="@+id/button9"
	    android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_alignTop="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:layout_marginStart="30dp"
        android:text="@string/chin"
        />
</RelativeLayout>