<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="50px"
    android:layout_marginStart="50px"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hajau.lockscreen.Setting">


    <Switch
        android:id="@+id/activeLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:checked="true"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <!--<Switch-->
        <!--android:id="@+id/hideIcon"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/hide_icon"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:textColor="@android:color/darker_gray"/>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->
    <TextView
        android:id="@+id/deviceAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_admin"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/readLaunchedLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_launched_log"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_reactive"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="240 giây"
        android:textColor="@android:color/darker_gray"/>

    <SeekBar
        android:id="@+id/timeToReactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
